fix flickering when nav is close to page bottom

--- a/src/docs/stylesheets/betamax.less
+++ b/src/docs/stylesheets/betamax.less
@@ -122,9 +122,13 @@ dl {
   border: 0;
 }
 
-.affix {
+.affix, .affix-bottom {
   top: 15px;
   width: inherit;
+}
+
+.affix-bottom {
+  position: fixed;
 }
 
 // hide headings in tab panes
